<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="horizontal"
    android:tag="layout/raw_homesaledata_0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:id="@+id/linearSale"
        android:paddingLeft="@dimen/_8sdp"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:srcCompat="@drawable/home_sale"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/_28sdp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/Flash"
            android:layout_centerVertical="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/_22sdp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sale"
            android:layout_centerVertical="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/SaleEnd"
            android:layout_centerVertical="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include android:id="@+id/homedata"
        layout="@layout/raw_home_data"/>

</androidx.appcompat.widget.LinearLayoutCompat>
