<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/activity_register_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background"/>

    <ScrollView
        android:id="@+id/sv"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_22sdp"
        android:padding="@dimen/_4sdp"
        android:background="@drawable/button"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:paddingLeft="@dimen/_24sdp"
            android:paddingTop="@dimen/_24sdp"
            android:paddingRight="@dimen/_24sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@mipmap/ic_launcher_foreground"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/user_outline_purple_900"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:textColorHint="@color/purple_900"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/purple_900"
                        android:textColorHint="@color/purple_900"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/edtName"
                        android:paddingLeft="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:longClickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Fullname"
                        android:singleLine="true"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:backgroundTint="@color/purple_900"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/user_mail_outline_purple_900"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:textColorHint="@color/purple_900"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/purple_900"
                        android:textColorHint="@color/purple_900"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/edtEmail"
                        android:paddingLeft="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:longClickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Email"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:backgroundTint="@color/purple_900"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/user_mobile_purple_900"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:textColorHint="@color/purple_900"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/purple_900"
                        android:textColorHint="@color/purple_900"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/edtMobile"
                        android:paddingLeft="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:longClickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/MobileNumber"
                        android:singleLine="true"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:backgroundTint="@color/purple_900"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:textColorHint="@color/purple_900"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/purple_900">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/purple_900"
                        android:textColorHint="@color/purple_900"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/edtPassword"
                        android:paddingLeft="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:longClickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        android:backgroundTint="@color/purple_900"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/user_password_outline_purple_900"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:textColorHint="@color/purple_900"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/purple_900">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/purple_900"
                        android:textColorHint="@color/purple_900"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/edtCPassword"
                        android:paddingLeft="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:longClickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ConfirmPassword"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:backgroundTint="@color/purple_900"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/user_password_outline_purple_900"/>

            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_gravity="center_vertical"
                    android:id="@+id/chTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_900"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/purple_900"
                    android:layout_gravity="right"
                    android:id="@+id/txtTermsConditions"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Read_Terms"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/btnRegister"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/Register"
                android:shadowColor="@color/colorPrimary"
                android:shadowRadius="@android:integer/config_shortAnimTime"
                android:layerType="software"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/purple_900"
                android:layout_gravity="center_horizontal"
                android:id="@+id/txtLogin"
                android:padding="@dimen/_12sdp"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyHaveAccount"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</RelativeLayout>
