<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="layout/activity_login_0">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_ui"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_150sdp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:srcCompat="@drawable/user_mail_outline_purple_900" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtEmail1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/black"
                        android:hint="@string/Email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:longClickable="false"
                        android:paddingLeft="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_14sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtPassword1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/black"
                        android:hint="@string/Password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:paddingLeft="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_14sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:srcCompat="@drawable/user_password_outline_purple_900" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingTop="15dp"
                    android:text="@string/ForgotPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/button"
                android:layerType="software"
                android:shadowColor="@color/colorPrimary"
                android:shadowRadius="@android:integer/config_shortAnimTime"
                android:text="@string/SecureLogin"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/_14sdp"
                android:text="@string/SignupNow"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_16sdp">

                <!--                <androidx.appcompat.widget.AppCompatTextView-->
                <!--                    android:id="@+id/txtOR"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_centerInParent="true"-->
                <!--                    android:layout_gravity="center_horizontal"-->
                <!--                    android:paddingLeft="@dimen/_8sdp"-->
                <!--                    android:paddingRight="@dimen/_8sdp"-->
                <!--                    android:text="@string/OR"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    android:textSize="@dimen/_14sdp"-->
                <!--                    android:visibility="visible" />-->

                <!--                <View-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="@dimen/_1sdp"-->
                <!--                    android:layout_centerVertical="true"-->
                <!--                    android:layout_toRightOf="@+id/txtOR"-->
                <!--                    android:background="@color/black" />-->

                <!--                <View-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="@dimen/_1sdp"-->
                <!--                    android:layout_centerVertical="true"-->
                <!--                    android:layout_toLeftOf="@+id/txtOR"-->
                <!--                    android:background="@color/black" />-->
                <ProgressBar
                    android:id="@+id/progress_bar_login"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="166dp"
                    android:layout_marginEnd="159dp"
                    android:foregroundGravity="center_horizontal"
                    android:indeterminate="true"
                    android:outlineAmbientShadowColor="@color/pink_100"
                    android:outlineSpotShadowColor="@color/pink_100"
                    android:visibility="gone" />

            </RelativeLayout>

            <!--            <RelativeLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent">-->

            <!--                <com.shobhitpuri.custombuttons.GoogleSignInButton-->
            <!--                    android:id="@+id/google_sign_in"-->
            <!--                    android:layout_width="220dp"-->
            <!--                    android:layout_height="40dp"-->
            <!--                    android:layout_centerInParent="true"-->
            <!--                    android:layout_gravity="center"-->
            <!--                    android:gravity="center"-->
            <!--                    android:text="@string/google_sign_in"-->
            <!--                    app:isDarkTheme="true" />-->

            <!--                <com.facebook.login.widget.LoginButton-->
            <!--                    android:id="@+id/facebook_sign_in"-->
            <!--                    android:layout_width="220dp"-->
            <!--                    android:layout_height="40dp"-->
            <!--                    android:layout_below="@+id/google_sign_in"-->
            <!--                    android:layout_alignParentStart="true"-->
            <!--                    android:layout_alignParentEnd="true"-->
            <!--                    android:layout_gravity="center_horizontal"-->
            <!--                    android:layout_marginStart="107dp"-->
            <!--                    android:layout_marginTop="26dp"-->
            <!--                    android:layout_marginEnd="98dp"-->
            <!--                    android:layout_marginBottom="243dp" />-->


            <!--            </RelativeLayout>-->

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
